[package]
name = "kdl"
version = "5.0.0-alpha.2"
description = "Document-oriented KDL parser and API. Allows formatting/whitespace/comment-preserving parsing and modification of KDL text."
authors = ["Kat Marchán <kzm@zkat.tech>", "KDL Community"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://kdl.dev"
repository = "https://github.com/kdl-org/kdl-rs"
keywords = ["kdl", "document", "serialization", "config"]
rust-version = "1.56.0"
edition = "2021"

[features]
default = ["span"]
span = []

[dependencies]
miette = "7.2.0"
nom = "7.1.3"
thiserror = "1.0.61"

[dev-dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
pretty_assertions = "1.4.0"
